<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="nl.hsleiden.investore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_items"
        android:name="nl.hsleiden.investore.ui.items.ItemsFragment"
        android:label="@string/menu_items"
        tools:layout="@layout/fragment_items" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="nl.hsleiden.investore.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

</navigation>